--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "Byeccentric <eccentric74@yandex.ru>",
   "license": "MIT",
   "dependencies": {
+    "@types/classnames": "^2.2.11",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
     "classnames": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
