--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "css-loader": "^5.0.0",
+    "css-modules-typescript-loader": "^4.0.1",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^2.0.0",
     "webpack": "4.44.2",
