--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "classnames": "^2.2.6",
+    "hookrouter": "^1.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.5"
   },
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^5.4.0",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/hookrouter": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "css-loader": "^5.0.0",
