--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@svgr/webpack": "^5.4.0",
     "@types/hookrouter": "^2.2.3",
+    "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "css-loader": "^5.0.0",
@@ -54,6 +55,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
@@ -61,6 +63,7 @@
     "sass-loader": "^10.0.5",
     "sass-resources-loader": "^2.1.1",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.4.4",
     "url-loader": "^4.1.1",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
